# birdisle-py

./: .coveragerc  .flake8  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  COPYING  MANIFEST.in  README.md  TODO  builder.py  conftest.py  mkwheels.sh  prepare-release.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
birdisle/: __init__.py  _version.py  aioredis.py  builder.py  redis.py
birdisle/.libs/: libbirdisle.so.1
doc/: birdisle.rst  changelog.rst  conf.py  index.rst  modules.rst  user.rst
examples/: poke.py  server.py
tests/: conftest.py  test_aioredis.py  test_birdisle.py
